--- a/Pipfile
+++ b/Pipfile
@@ -9,4 +9,5 @@ momapy = {editable = true, path = "."}
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
+python_full_version = "3.11.3"
