--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "colorama>=0.4.6",
     "bezier>=2023.7.28",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10, <=3.11"
 readme = "README.md"
 license = {text = "GPL-3.0-or-later"}
 
