--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "griffe-fieldz>=0.1.2",
     "sphinx>=8.0.2",
 ]
-requires-python = ">=3.10, <=3.11"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "GPL-3.0-or-later"}
 
