--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "mkdocs-material>=9.5.31",
     "griffe-fieldz>=0.1.2",
     "sphinx>=8.0.2",
+    "sphinx-autodoc-typehints>=2.2.3",
+    "furo>=2024.8.6",
+    "sphinx-autoapi>=3.2.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
