--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "sphinx-autodoc-typehints>=2.2.3",
     "furo>=2024.8.6",
     "sphinx-autoapi>=3.2.1",
+    "notebook>=7.2.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
