--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,11 @@ Issues = "https://github.com/adrienrougny/momapy/issues"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pdm]
+plugins = [
+    "pdm-readiness"
+]
+
 [tool.pdm.dev-dependencies]
 dev = [
     "griffe-fieldz>=0.1.2",
