--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ plugins = [
     "pdm-readiness"
 ]
 
-[tool.pdm.dev-dependencies]
+
+[dependency-groups]
 dev = [
     "griffe-fieldz>=0.1.2",
     "sphinx>=8.0.2",
@@ -47,4 +48,6 @@ dev = [
     "furo>=2024.8.6",
     "sphinx-autoapi>=3.2.1",
     "notebook>=7.2.1",
+    "mkdocstrings-python>=1.16.12",
+    "mkdocs-material>=9.6.16",
 ]
