--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,8 @@ site_name: momapy
 site_url: https://example.com
 nav:
   - Home: index.md
-  - Demo: demo.md
+  - Getting started: getting_started.md
+  - Demo: demo.ipynb
   - API reference:
     - Core: api_reference/core.md
     - Builder: api_reference/builder.md
@@ -30,6 +31,7 @@ nav:
       - Core: api_reference/sbml/core.md
       - I/O:
         - SBML: api_reference/sbml/io/sbml.md
+  - About: about.md
 theme:
   name: material
   features:
@@ -39,6 +41,8 @@ theme:
     - navigation.sections
     - navigation.expand
 plugins:
+  - mkdocs-jupyter:
+      ignore_h1_titles: True
   - search
   - autorefs
   - mkdocstrings:
@@ -47,10 +51,11 @@ plugins:
         python:
           paths: [src]
           options:
-            group_by_category: true # to group by category
+            inherited_members: true
+            group_by_category: false # to group by category
             show_category_heading: false # to give a title to the category
             show_root_heading: true # to show the root's title
-            parameter_headings: true
+            parameter_headings: false
             show_signature_annotations: true
             separate_signature: true # to give the signature on a separate line
             show_symbol_type_heading: true # to show the type of the object in the heading
@@ -62,3 +67,7 @@ plugins:
             summary: true
             extensions:
               - griffe_fieldz: {include_inherited: true}
+              - griffe_inherited_docstrings
+markdown_extensions:
+  - toc:
+      toc_depth: 3
