--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,4 +51,6 @@ dev = [
     "mkdocstrings-python>=1.16.12",
     "mkdocs-material>=9.6.16",
     "black>=25.1.0",
+    "griffe-inherited-docstrings>=1.1.1",
+    "mkdocs-jupyter>=0.25.1",
 ]
