--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,28 +2,26 @@
 name = "momapy"
 version = "0.1.0"
 description = "A library for working with molecular maps"
-authors = [
-    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
-]
+authors = [{ name = "Adrien Rougny", email = "adrienrougny@gmail.com" }]
 dependencies = [
-    "frozendict>=2.3.10",
-    "pycairo>=1.25.1",
-    "pygobject>=3.46.0",
-    "numpy>=1.26.2",
-    "pyparsing>=3.1.1",
-    "skia-python>=87.5",
-    "shapely>=2.0.2",
-    "colorama>=0.4.6",
-    "bezier>=2023.7.28",
-    "lxml>=5.3.2",
+  "frozendict>=2.3.10",
+  "pycairo>=1.25.1",
+  "pygobject>=3.46.0",
+  "numpy>=1.26.2",
+  "pyparsing>=3.1.1",
+  "skia-python>=87.5",
+  "shapely>=2.0.2",
+  "colorama>=0.4.6",
+  "bezier>=2023.7.28",
+  "lxml>=5.3.2",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "GPL-3.0-or-later"}
+license = { text = "GPL-3.0-or-later" }
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+  "Operating System :: OS Independent",
 ]
 
 [project.urls]
@@ -31,19 +29,19 @@ Homepage = "https://github.com/adrienrougny/momapy"
 Issues = "https://github.com/adrienrougny/momapy/issues"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [dependency-groups]
 dev = [
-    "griffe-fieldz>=0.1.2",
-    "notebook>=7.2.1",
-    "mkdocstrings-python>=1.16.12",
-    "mkdocs-material>=9.6.16",
-    "griffe-inherited-docstrings>=1.1.1",
-    "mkdocs-jupyter>=0.25.1",
-    "mkdocs-pygments>=0.0.2",
-    "ruff>=0.12.8",
+  "griffe-fieldz>=0.1.2",
+  "notebook>=7.2.1",
+  "mkdocstrings-python>=1.16.12",
+  "mkdocs-material>=9.6.16",
+  "griffe-inherited-docstrings>=1.1.1",
+  "mkdocs-jupyter>=0.25.1",
+  "mkdocs-pygments>=0.0.2",
+  "ruff>=0.12.8",
 ]
 
 [tool.basedpyright]
@@ -51,8 +49,4 @@ reportMissingModuleSource = false
 typeCheckingMode = "standard"
 
 [tool.pdm]
-plugins = [
-    "pdm-readiness"
-]
-
-
+plugins = ["pdm-readiness"]
