--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,5 @@ typeCheckingMode = "standard"
 plugins = ["pdm-readiness"]
 
 [tool.pdm.version]
-tag_regex = '^release/(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
+tag_regex = '^v(?P<version>(.*))'
 source = "scm"
-tag_filter = "release/*"
