--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,5 @@ typeCheckingMode = "standard"
 plugins = ["pdm-readiness"]
 
 [tool.pdm.version]
-tag_regex = '^v(?P<version>(.*))'
+tag_regex = '^v(?P<version>([0-9].*))'
 source = "scm"
