--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,13 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on: push
+on:
+  push:
+    tags:
+      - "v[0-9].*"
 
 jobs:
   build:
     name: Build distribution 📦
-    if: startsWith(github.ref, 'refs/tags/v')  # only publish to PyPI on tag pushes
     runs-on: ubuntu-latest
 
     steps:
@@ -30,9 +32,8 @@ jobs:
         name: python-package-distributions
         path: dist/
 
-  publish-to-testpypi:
+  testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
-    if: startsWith(github.ref, 'refs/tags/v')  # only publish to PyPI on tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
@@ -55,10 +56,9 @@ jobs:
       with:
         repository-url: https://test.pypi.org/legacy/
 
-  publish-to-pypi:
+  pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/v')  # only publish to PyPI on tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
