--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "colorama>=0.4.6",
   "bezier>=2023.7.28",
   "lxml>=5.3.2",
+  "freetype-py>=2.5.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
