--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
   "bezier>=2023.7.28",
   "lxml>=5.3.2",
   "freetype-py>=2.5.1",
+  "uharfbuzz>=0.53.0",
+  "matplotlib>=3.10.8",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
