cleaned github actions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,10 @@
-name: docs
+name: Make docs
 
 on:
   push:
     branches:
-      - master 
-
-
       - main
+
 permissions:
   contents: write
 jobs:
