--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Test package installation
+name: Tests
 
 on:
   push:
@@ -6,11 +6,12 @@ on:
       - testing
 
 jobs:
-  test-install:
+  test:
+    name: Test on ${{ matrix.os-python.os }} - Python ${{ matrix.os-python.python-version }}
     runs-on: ${{ matrix.os-python.os }}
     strategy:
+      fail-fast: false
       matrix:
-        extras: ['']
         os-python:
           - {os: ubuntu-latest, python-version: '3.10'}
           - {os: ubuntu-latest, python-version: '3.11'}
@@ -27,12 +28,13 @@ jobs:
       - name: Install package
         run: |
           python -m pip install --upgrade pip
-          if [ -z "${{ matrix.extras }}" ]; then
-            pip install .
-          else
-            pip install .[${{ matrix.extras }}]
-          fi
+          pip install -e .
         shell: bash
-      - name: Verify installation
+      - name: Install pytest
         run: |
-          python -c "import momapy"
+          pip install pytest
+        shell: bash
+      - name: Run tests
+        run: |
+          pytest tests/ -v --tb=short
+        shell: bash
