--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,34 +7,34 @@ on:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os-python.os }} - Python ${{ matrix.os-python.python-version }}
-    runs-on: ${{ matrix.os-python.os }}
+    name: Test on ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os-python:
-          - {os: ubuntu-latest, python-version: '3.10'}
-          - {os: ubuntu-latest, python-version: '3.11'}
-          - {os: ubuntu-latest, python-version: '3.12'}
-          - {os: windows-latest, python-version: '3.12'}
-          - {os: macos-latest, python-version: '3.12'}
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.os-python.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.os-python.python-version }}
-      - name: Install package
+          python-version: ${{ matrix.python-version }}
+      - name: Install uv
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
+          pip install uv
         shell: bash
-      - name: Install pytest
+      - name: Install tox
         run: |
-          pip install pytest
+          pip install tox tox-uv
         shell: bash
-      - name: Run tests
+      - name: Run tests with tox (min scenario)
         run: |
-          pytest tests/ -v --tb=short
+          PYVER="${{ matrix.python-version }}"
+          TOX_ENV="py${PYVER//./}-min"
+          tox -e $TOX_ENV
         shell: bash
+        env:
+          BEZIER_NO_EXTENSION: 1
