--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,20 +7,27 @@ on:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    name: Test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.10', '3.11', '3.12']
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.10'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: Install uv
         run: |
           python -m pip install --upgrade pip
@@ -30,11 +37,9 @@ jobs:
         run: |
           pip install tox tox-uv
         shell: bash
-      - name: Run tests with tox (min scenario)
+      - name: Run tests with tox (all Python versions, min scenario)
         run: |
-          PYVER="${{ matrix.python-version }}"
-          TOX_ENV="py${PYVER//./}-min"
-          tox -e $TOX_ENV
+          tox -e py310-min,py311-min,py312-min
         shell: bash
         env:
           BEZIER_NO_EXTENSION: 1
