--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: momapy
-site_url: https://example.com
+site_url: https://adrienrougny.github.io/momapy/
+copyright: Version !ENV [VERSION, 'dev']
 nav:
   - Home: index.md
   - User manual: demo.ipynb
