--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,11 @@ Issues = "https://github.com/adrienrougny/momapy/issues"
 skia = ["skia-python>=138.0"]
 cairo = ["pycairo>=1.29.0", "pygobject>=3.54.5"]
 all = ["momapy[cairo, skia]"]
+demo = ["notebook>=7.2.1"]
 
 [dependency-groups]
 dev = [
   "griffe-fieldz>=0.1.2",
-  "notebook>=7.2.1",
   "mkdocstrings-python>=1.16.12",
   "mkdocs-material>=9.6.16",
   "griffe-inherited-docstrings>=1.1.1",
