--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,21 @@ jobs:
     - uses: actions/checkout@v4
       with:
         persist-credentials: false
+        ref: main
+        fetch-depth: 0
+
+    - name: Get latest tag
+      id: get_tag
+      run: |
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          # For manual triggers, get the latest tag on main
+          LATEST_TAG=$(git describe --tags --abbrev=0 --match "v[0-9]*" origin/main)
+          echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          git checkout $LATEST_TAG
+        else
+          # For tag pushes, use the tag that triggered the workflow
+          echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        fi
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -88,6 +103,22 @@ jobs:
       contents: write
 
     steps:
+    - name: Checkout to get tag info
+      uses: actions/checkout@v4
+      with:
+        ref: main
+        fetch-depth: 0
+
+    - name: Get latest tag
+      id: get_tag
+      run: |
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          LATEST_TAG=$(git describe --tags --abbrev=0 --match "v[0-9]*" origin/main)
+          echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+        else
+          echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        fi
+
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
@@ -95,11 +126,14 @@ jobs:
         path: dist/
 
     - name: Extract version from tag
-      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+      run: |
+        TAG="${{ steps.get_tag.outputs.tag }}"
+        echo "VERSION=${TAG#v}" >> $GITHUB_ENV
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
+        tag_name: ${{ steps.get_tag.outputs.tag }}
         files: dist/*
         generate_release_notes: true
         body: |
@@ -132,9 +166,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        ref: main
         fetch-depth: 0
+
+    - name: Get latest tag and checkout
+      id: get_tag
+      run: |
+        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          LATEST_TAG=$(git describe --tags --abbrev=0 --match "v[0-9]*" origin/main)
+          echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          git checkout $LATEST_TAG
+        else
+          echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        fi
+
     - name: Extract version from tag
-      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+      run: |
+        TAG="${{ steps.get_tag.outputs.tag }}"
+        echo "VERSION=${TAG#v}" >> $GITHUB_ENV
     - name: Configure Git Credentials
       run: |
         git config user.name github-actions[bot]
