--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dev = [
   "mkdocs-pygments>=0.0.2",
   "ruff>=0.12.8",
   "pre-commit>=4.5.1",
+  "git-cliff>=2.12.0",
   { include-group = "test" },
 ]
 test = ["pytest>=9.0.2"]
