test: added coverage

--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,13 @@ setenv =
     BEZIER_NO_EXTENSION = 1
 commands =
     pytest {posargs:tests/}
+
+[testenv:coverage]
+description = Run tests with coverage report
+dependency_groups = test
+extras = all
+install_command = uv pip install --no-binary=bezier {opts} {packages}
+setenv =
+    BEZIER_NO_EXTENSION = 1
+commands =
+    pytest --cov=momapy --cov-report=term --cov-report=html {posargs:tests/}
