--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dev = [
   "git-cliff>=2.12.0",
   { include-group = "test" },
 ]
-test = ["pytest>=9.0.2"]
+test = ["pytest>=9.0.2", "pytest-cov>=6.0.0"]
 
 [project.scripts]
 momapy = "momapy.cli:main"
@@ -66,3 +66,18 @@ tag_regex = '^v(?P<version>([0-9].*))'
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/momapy"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+markers = [
+    "slow: marks tests as slow (roundtrip, rendering)",
+]
+
+[tool.coverage.run]
+source = ["src/momapy"]
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = false
+fail_under = 70
