--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,20 @@
-name: Publish package to TestPyPI and PyPI
+name: Release
 
 on:
   workflow_dispatch:
   push:
     tags:
-      - "v[0-9].*"
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
+  test:
+    name: Run tests
+    uses: ./.github/workflows/tests.yml
+
   build:
     name: Build package
+    needs:
+    - test
     runs-on: ubuntu-latest
 
     steps:
@@ -22,12 +28,10 @@ jobs:
       id: get_tag
       run: |
         if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          # For manual triggers, get the latest tag on main
           LATEST_TAG=$(git describe --tags --abbrev=0 --match "v[0-9]*" origin/main)
           echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
           git checkout $LATEST_TAG
         else
-          # For tag pushes, use the tag that triggered the workflow
           echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
         fi
     - name: Set up Python
@@ -98,6 +102,8 @@ jobs:
     needs:
     - build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
       with:
@@ -129,6 +135,23 @@ jobs:
       with:
         name: changelog-snippet
         path: CHANGELOG_RELEASE.md
+
+    - name: Generate full changelog
+      uses: orhun/git-cliff-action@v4
+      with:
+        config: cliff.toml
+        args: --verbose
+      env:
+        OUTPUT: CHANGELOG.md
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Commit and push updated CHANGELOG.md
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add CHANGELOG.md
+        git diff --cached --quiet || git commit -m "docs: update CHANGELOG.md"
+        git push origin main
 
   github-release:
     name: Create GitHub Release
@@ -199,51 +222,3 @@ jobs:
         tag_name: ${{ steps.get_tag.outputs.tag }}
         files: dist/*
         body_path: RELEASE_BODY.md
-
-  deploy-docs:
-    name: Deploy documentation
-    needs:
-    - pypi
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: main
-        fetch-depth: 0
-
-    - name: Get latest tag and checkout
-      id: get_tag
-      run: |
-        if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          LATEST_TAG=$(git describe --tags --abbrev=0 --match "v[0-9]*" origin/main)
-          echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
-          git checkout $LATEST_TAG
-        else
-          echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Extract version from tag
-      run: |
-        TAG="${{ steps.get_tag.outputs.tag }}"
-        echo "VERSION=${TAG#v}" >> $GITHUB_ENV
-    - name: Configure Git Credentials
-      run: |
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.x
-    - name: Cache dependencies
-      uses: actions/cache@v4
-      with:
-        key: mkdocs-material-${{ github.run_id }}
-        path: ~/.cache
-        restore-keys: |
-          mkdocs-material-
-    - name: Install MkDocs and dependencies
-      run: pip install mkdocs-material griffe-fieldz mkdocstrings-python griffe-inherited-docstrings mkdocs-jupyter mkdocs-pygments
-    - name: Deploy documentation
-      run: mkdocs gh-deploy --force
