--- a/cliff.toml
+++ b/cliff.toml
@@ -48,6 +48,6 @@ commit_parsers = [
 ]
 protect_breaking_commits = false
 filter_commits = false
-tag_pattern = "v[0-9].*"
+tag_pattern = "v[0-9]+\\.[0-9]+\\.[0-9]+"
 skip_tags = "commute-v1.0"
 sort_commits = "newest"
